tests/unit-tests/failing/x86_msvc/test_23400.c
/* Cake x86_msvc */

int main()
{
    int k;

    {
        int i;

        i = 0;
        for (; i < 10; i++)
        {
            if (i != 0)
            {
            }
        }
    }
    k = 0;
    k--;
}


